# MuseScore

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  all.h  ninja_build.sh  version.cmake
.github/workflows/: build_all.yml  build_backend.yml  build_linux.yml  build_linux_arm.yml  build_macos.yml  build_windows.yml  deploy.yml  update_learn_playlists.yml
assets/: CMakeLists.txt  CONTRIBUTING.md  README.md  archive-functions.cmake  basic-functions.cmake  font-dependencies.cmake  image-functions.cmake  svg-functions.cmake
assets/brand/: CMakeLists.txt
assets/files/: CMakeLists.txt
assets/icons/: CMakeLists.txt  icon-functions.cmake
assets/icons/app/: CMakeLists.txt
assets/icons/file/: CMakeLists.txt
assets/platform/: CMakeLists.txt  icon-functions.cmake
assets/platform/app-icons/: CMakeLists.txt
assets/platform/file-icons/: CMakeLists.txt
assets/resources/: CMakeLists.txt
assets/splash/: CMakeLists.txt
buildscripts/ci/backend/: build.sh
buildscripts/ci/linux/: build.sh
buildscripts/ci/macos/: build.sh
buildscripts/ci/release/: collate_release_binaries.sh  make_release_name.sh  make_tag_name.sh
buildscripts/ci/windows/: build.bat
libmscore/: chordrest.cpp  cmd.cpp  edit.cpp  element.h  input.h  lyrics.cpp  measure.cpp  measure.h  measurebase.cpp  measurebase.h  score.cpp  score.h  scoreElement.h  segment.cpp  segment.h  sequencer.h  spanner.cpp  staff.cpp  staff.h
manual/: genManual.cpp
mscore/: CMakeLists.txt  aboutbox.ui  globals.h  keyb.cpp  logindialog.ui  lyricseditor.cpp  lyricseditor.h  lyricseditor.ui  musescore.cpp  musescore.h  musescore.qrc  musescoreassets-windows.rc.in  newwizard.cpp  palette.cpp  palette.h  palettebox.cpp  palettebox.h  scoreaccessibility.cpp  scoreaccessibility.h  scoreitemmodel.cpp  scoreitemmodel.h  scoreview.cpp  scoreview.h  seq.cpp  seq.h  shortcut.cpp  startcenter.cpp  startcenter.h  svgrenderer.cpp  svgrenderer.h
mscore/data/: mscore.icns  shortcuts.xml
mscore/data/icons/: LICENSE.md
src/appshell/internal/: applicationuiactions.cpp
src/appshell/qml/Preferences/internal/: IncrementalPropertyControlWithTitle.qml
src/braille/internal/: notationbraille.cpp
src/braille/qml/MuseScore/Braille/: BrailleView.qml
src/diagnostics/internal/: diagnosticsactions.cpp
src/engraving/accessibility/: accessibleitem.cpp
src/engraving/libmscore/: engravingitem.cpp  engravingitem.h  engravingobject.cpp  engravingobject.h  select.cpp
src/framework/accessibility/: iaccessible.h
src/framework/accessibility/internal/: accessibilitycontroller.cpp  accessibilitycontroller.h  accessibleiteminterface.cpp  accessibleiteminterface.h
src/framework/global/: CMakeLists.txt
src/framework/global/internal/platform/win/: shellshortcut.cpp  shellshortcut.h
src/framework/global/io/: ifilesystem.h
src/framework/global/io/internal/: filesystem.cpp  filesystem.h
src/framework/global/tests/mocks/: filesystemmock.h
src/framework/shortcuts/internal/: shortcutsregister.cpp
src/framework/shortcuts/view/: shortcutsmodel.cpp
src/framework/ui/: uitypes.h
src/framework/ui/view/: focuslistener.cpp  qmlaccessible.cpp
src/framework/uicomponents/qml/Muse/UiComponents/: IncrementalPropertyControl.qml  TextInputArea.qml  TextInputField.qml
src/framework/uicomponents/qml/MuseScore/UiComponents/: ValueList.qml
src/framework/uicomponents/view/popupwindow/: popupwindow_qquickview.cpp
src/importexport/musicxml/internal/musicxml/: exportxml.cpp  importmxmlpass1.cpp  importmxmlpass1.h  importmxmlpass2.cpp  importmxmlpass2.h
src/importexport/musicxml/internal/musicxml/export/: exportmusicxml.cpp
src/notation/internal/: notationconfiguration.cpp  notationinteraction.cpp  notationuiactions.cpp
src/notation/view/: noteinputbarmodel.cpp
src/playback/internal/: playbackuiactions.cpp
src/plugins/internal/: pluginsuiactions.cpp
src/project/internal/: projectuiactions.cpp
src/project/qml/MuseScore/Project/internal/NewScore/: MeasuresSettings.qml
